Fix for Cucumber on JDK >1.8